--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,3 @@
-@import"./src/scss/_reset";
-@import"./src/scss/_mixins";
-@import"./src/scss/_variables";
+@import"./scss/mixins";
+@import"./scss/variables";
+@import"./scss/reset";
